--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
         <h2>Contact Me</h2>
         <p>Let’s connect on the platforms below:</p>
         <div class="socials">
-          <a href="https://facebook.com/" target="_blank">Facebook</a>
-          <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
+          <a href="https://www.facebook.com/surudoi.16" target="_blank">Facebook</a>
+          <a href="www.linkedin.com/in/kian-axl-diaz-814605365" target="_blank">LinkedIn</a>
           <a href="https://github.com/Kasumi12" target="_blank">GitHub</a>
           <a href="https://discord.com/" target="_blank">Discord</a>
         </div>
@@ -269,3 +269,4 @@
   </script>
 </body>
 </html>
+
