--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
       <section class="hero">
         <h2>Hello, I’m Kian 👋</h2>
-        <p>I build clean, minimalist, and accessible websites and applications.</p>
+        <p>I build clean, minimalist, and accessible for website and mobile.</p>
       </section>
 
       <!-- Projects -->
@@ -43,18 +43,22 @@
           <button class="accordion-btn">View My Projects</button>
           <div class="accordion-content">
             <div class="card">
+              <img src="/images/healpi-web.jpg" alt="HEALPI Web Screenshot" style="width:100%;max-width:300px;border-radius:8px;margin-bottom:10px;" />
               <h3>HEALPI Web</h3>
               <p>A healthcare management platform bridging provincial and municipal services.</p>
             </div>
             <div class="card">
+              <img src="/images/nethench.jpg" alt="NetHench Screenshot" style="width:100%;max-width:300px;border-radius:8px;margin-bottom:10px;" />
               <h3>NetHench</h3>
               <p>An IoT dashboard for monitoring poultry health and anthelmintic efficacy.</p>
             </div>
             <div class="card">
+              <img src="/images/stealthify-web.jpg" alt="Stealthify Web Screenshot" style="width:100%;max-width:300px;border-radius:8px;margin-bottom:10px;" />
               <h3>Stealthify Web</h3>
               <p>A privacy-focused interface for dynamic IP switching and secure browsing.</p>
             </div>
             <div class="card">
+              <img src="/images/hotele.jpg" alt="Hotel’e Screenshot" style="width:100%;max-width:300px;border-radius:8px;margin-bottom:10px;" />
               <h3>Hotel’e</h3>
               <p>A hotel management system fully integrated with a database.</p>
             </div>
@@ -75,7 +79,12 @@
             <div class="card"><h3>Cyber Tools – ICpEP</h3></div>
             <div class="card"><h3>Cyber Threat Landscape and Cyber Hygiene</h3></div>
             <div class="card"><h3>Cyber 101</h3></div>
-            <div class="card"><h3>Computer Hardware Basics</h3></div>
+            <div class="card">
+              <a href="/Computer%20Hardware%20Basics.pdf" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/plasticine/100/000000/pdf.png" alt="Certificate PDF" style="width: 80px;" />
+                <div>View Computer Hardware Basics Certificate (PDF)</div>
+              </a>
+            </div>
           </div>
         </div>
       </section>
