--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
               <h3>Stealthify Web</h3>
               <p>A privacy-focused interface for dynamic IP switching and secure browsing.</p>
             </div>
-            </div>
           </div>
         </div>
       </section>
@@ -74,19 +73,43 @@
         <div class="accordion">
           <button class="accordion-btn">View My Certifications</button>
           <div class="accordion-content">
-            <div class="card"><img src="/images/cert-cyber.jpg" alt="Cyber Threat Management"/><h3>Cyber Threat Management</h3></div>
-            <div class="card"><img src="/images/cert-sql.jpg" alt="SQL Injection Attacks"/><h3>SQL Injection Attacks</h3></div>
-            <div class="card"><img src="/images/cert-intro.jpg" alt="Introduction to Cybersecurity"/><h3>Introduction to Cybersecurity</h3></div>
+
+            <div class="card">
+              <img src="/images/cert-cyber.jpg" alt="Cyber Threat Management"/>
+              <h3>Cyber Threat Management</h3>
+            </div>
+
+            <div class="card">
+              <img src="/images/cert-sql.jpg" alt="SQL Injection Attacks"/>
+              <h3>SQL Injection Attacks</h3>
+            </div>
+
+            <div class="card">
+              <img src="/images/cert-intro.jpg" alt="Introduction to Cybersecurity"/>
+              <h3>Introduction to Cybersecurity</h3>
+            </div>
+
             <div class="card"><h3>Data Privacy Awareness (4-hour Session)</h3></div>
             <div class="card"><h3>Cyber Tools – ICpEP</h3></div>
             <div class="card"><h3>Cyber Threat Landscape and Cyber Hygiene</h3></div>
             <div class="card"><h3>Cyber 101</h3></div>
+
+            <!-- PDF Certificate: Computer Hardware Basics -->
             <div class="card">
-              <a href="/Computer%20Hardware%20Basics.pdf" target="_blank" rel="noopener noreferrer">
-                <img src="https://img.icons8.com/plasticine/100/000000/pdf.png" alt="Certificate PDF" style="width: 80px;" />
+              <a href="certificates/Computer Hardware Basics.pdf" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/plasticine/100/000000/pdf.png" alt="Computer Hardware Basics PDF" style="width: 80px;" />
                 <div>View Computer Hardware Basics Certificate (PDF)</div>
               </a>
             </div>
+
+            <!-- PDF Certificate: Free Coding Bootcamp -->
+            <div class="card">
+              <a href="certificates/Kian Axl T. Diaz Data Visualization Workshop (Sept 17) - Certificate of Participation.pdf" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/plasticine/100/000000/pdf.png" alt="Data Visualization Workshop PDF" style="width: 80px;" />
+                <div>Free Coding Bootcamp: Data Visualization Workshop</div>
+              </a>
+            </div>
+
           </div>
         </div>
       </section>
