--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
     .hero .btn:hover {
       background: #374ccf;
     }
+
+    /* Fix header cutting content */
+    section {
+      scroll-margin-top: 90px; /* offset for fixed header */
+    }
   </style>
 </head>
 <body>
@@ -222,6 +227,16 @@
       © 2025 Kasumi12
     </footer>
   </div>
-  <script src="main.js"></script>
+
+  <!-- Accordion script -->
+  <script>
+    document.querySelectorAll(".accordion-btn").forEach((btn) => {
+      btn.addEventListener("click", () => {
+        const content = btn.nextElementSibling;
+        btn.classList.toggle("active");
+        content.classList.toggle("active");
+      });
+    });
+  </script>
 </body>
 </html>
