--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <div class="page">
     <header>
       <div class="brand">
-        <h1>Kian Axl</h1>
+        <h1>Portfolio</h1>
       </div>
       <nav id="mainNav">
         <a href="#projects">Projects</a>
