--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
               <div class="card">HTML / CSS</div>
               <div class="card">JavaScript</div>
               <div class="card">Flutter</div>
-              <div class="card">SQL</div>
+              <div class="card">Dart</div>
               <div class="card">Networking</div>
-              <div class="card">Computer Technician</div>
-              <div class="card">Android Repair</div>
+              <div class="card">Computer Troubleshoot</div>
+              <div class="card">Android Troubleshoot</div>
             </div>
           </div>
         </div>
